--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
     "name" : "work2done",
     "version" : "1.0",
     "description" : "this is a simple todo list ",
+    "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
     "browser_action": {
         "default_popup" : "index.html"
     }
